[Import] added the javafx library as a dependency and updated the README accordingly